# JetsonDeepstreamWsl

./: .gitignore  CMakeLists.txt
configs/: config_infer_primary_yoloV8.txt  dstest1_config.yml  dstest1_pgie_config.txt
libs_to_build/lib_ByteTracker/deploy/DeepStream/src/: BYTETracker.cpp  NvMOTContext.cpp
libs_to_build/lib_bbox_parser/: CMakeLists.txt  README.md  deepstream_config.txt
libs_to_build/lib_bbox_parser/libbboxparser/: parse_custom_bbox.cpp
src/: Makefile  README  deepstream_test1_app.c  deepstream_test1_app.cpp  dstest1_config.yml  dstest1_pgie_config.txt  dstest1_pgie_nvinferserver_config.txt
